// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Another Button button with link to another story 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-c4=""
  >
    <button
      _ngcontent-c4=""
    >
      Go to Welcome Story
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Button with some emoji 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-c2=""
  >
    <button
      _ngcontent-c2=""
    >
      😀 😎 👍 💯
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Button with some emoji and action 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-c3=""
  >
    <button
      _ngcontent-c3=""
    >
      😀 😎 👍 💯
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Button with text 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-c1=""
  >
    <button
      _ngcontent-c1=""
    >
      Hello Button
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots InboxScreen Connected Error 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <inbox-screen>
      <pure-inbox-screen
        ng-reflect-error="Error"
      >
        
        <div
          class="page lists-show"
        >
          <div
            class="wrapper-message"
          >
            <span
              class="icon-face-sad"
            />
            <div
              class="title-message"
            >
              Oh no!
            </div>
            <div
              class="subtitle-message"
            >
              Something went wrong
            </div>
          </div>
        </div>
        
      </pure-inbox-screen>
    </inbox-screen>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots InboxScreen default 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <inbox-screen>
      <pure-inbox-screen
        ng-reflect-error=""
      >
        
        
        <div
          class="page lists-show"
        >
          <nav>
            <h1
              class="title-page"
            >
              <span
                class="title-wrapper"
              >
                Taskbox
              </span>
            </h1>
          </nav>
          <task-list>
            <pure-task-list
              ng-reflect-tasks="[object Object],[object Object"
            >
              <div
                class="list-items"
              >
                
                <task-item
                  ng-reflect-task="[object Object]"
                >
                  <div
                    class="list-item TASK_INBOX"
                  >
                    <label
                      class="checkbox"
                    >
                      <input
                        disabled="true"
                        name="checked"
                        type="checkbox"
                      />
                      <span
                        class="checkbox-custom"
                      />
                    </label>
                    <div
                      class="title"
                    >
                      <input
                        placeholder="Input title"
                        readonly="true"
                        type="text"
                      />
                    </div>
                    <div
                      class="actions"
                    >
                      
                      <a>
                        <span
                          class="icon-star"
                        />
                      </a>
                    </div>
                  </div>
                </task-item>
                <task-item
                  ng-reflect-task="[object Object]"
                >
                  <div
                    class="list-item TASK_INBOX"
                  >
                    <label
                      class="checkbox"
                    >
                      <input
                        disabled="true"
                        name="checked"
                        type="checkbox"
                      />
                      <span
                        class="checkbox-custom"
                      />
                    </label>
                    <div
                      class="title"
                    >
                      <input
                        placeholder="Input title"
                        readonly="true"
                        type="text"
                      />
                    </div>
                    <div
                      class="actions"
                    >
                      
                      <a>
                        <span
                          class="icon-star"
                        />
                      </a>
                    </div>
                  </div>
                </task-item>
                <task-item
                  ng-reflect-task="[object Object]"
                >
                  <div
                    class="list-item TASK_INBOX"
                  >
                    <label
                      class="checkbox"
                    >
                      <input
                        disabled="true"
                        name="checked"
                        type="checkbox"
                      />
                      <span
                        class="checkbox-custom"
                      />
                    </label>
                    <div
                      class="title"
                    >
                      <input
                        placeholder="Input title"
                        readonly="true"
                        type="text"
                      />
                    </div>
                    <div
                      class="actions"
                    >
                      
                      <a>
                        <span
                          class="icon-star"
                        />
                      </a>
                    </div>
                  </div>
                </task-item>
                <task-item
                  ng-reflect-task="[object Object]"
                >
                  <div
                    class="list-item TASK_INBOX"
                  >
                    <label
                      class="checkbox"
                    >
                      <input
                        disabled="true"
                        name="checked"
                        type="checkbox"
                      />
                      <span
                        class="checkbox-custom"
                      />
                    </label>
                    <div
                      class="title"
                    >
                      <input
                        placeholder="Input title"
                        readonly="true"
                        type="text"
                      />
                    </div>
                    <div
                      class="actions"
                    >
                      
                      <a>
                        <span
                          class="icon-star"
                        />
                      </a>
                    </div>
                  </div>
                </task-item>
                
                
              </div>
            </pure-task-list>
          </task-list>
        </div>
      </pure-inbox-screen>
    </inbox-screen>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots InboxScreen error 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <pure-inbox-screen
      ng-reflect-error="Something!"
    >
      
      <div
        class="page lists-show"
      >
        <div
          class="wrapper-message"
        >
          <span
            class="icon-face-sad"
          />
          <div
            class="title-message"
          >
            Oh no!
          </div>
          <div
            class="subtitle-message"
          >
            Something went wrong
          </div>
        </div>
      </div>
      
    </pure-inbox-screen>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Task archived 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <task-item
      ng-reflect-task="[object Object]"
    >
      <div
        class="list-item TASK_ARCHIVED"
      >
        <label
          class="checkbox"
        >
          <input
            checked=""
            disabled="true"
            name="checked"
            type="checkbox"
          />
          <span
            class="checkbox-custom"
          />
        </label>
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="true"
            type="text"
          />
        </div>
        <div
          class="actions"
        >
          
        </div>
      </div>
    </task-item>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Task default 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <task-item
      ng-reflect-task="[object Object]"
    >
      <div
        class="list-item TASK_INBOX"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="true"
            name="checked"
            type="checkbox"
          />
          <span
            class="checkbox-custom"
          />
        </label>
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="true"
            type="text"
          />
        </div>
        <div
          class="actions"
        >
          
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
    </task-item>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Task pinned 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <task-item
      ng-reflect-task="[object Object]"
    >
      <div
        class="list-item TASK_PINNED"
      >
        <label
          class="checkbox"
        >
          <input
            disabled="true"
            name="checked"
            type="checkbox"
          />
          <span
            class="checkbox-custom"
          />
        </label>
        <div
          class="title"
        >
          <input
            placeholder="Input title"
            readonly="true"
            type="text"
          />
        </div>
        <div
          class="actions"
        >
          
          <a>
            <span
              class="icon-star"
            />
          </a>
        </div>
      </div>
    </task-item>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots TaskList default 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <pure-task-list
        ng-reflect-tasks="[object Object],[object Object"
      >
        <div
          class="list-items"
        >
          
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          
          
        </div>
      </pure-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots TaskList empty 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <pure-task-list
        ng-reflect-tasks=""
      >
        <div
          class="list-items"
        >
          
          
          <div
            class="wrapper-message"
          >
            <span
              class="icon-check"
            />
            <div
              class="title-message"
            >
              You have no tasks
            </div>
            <div
              class="subtitle-message"
            >
              Sit back and relax
            </div>
          </div>
          
        </div>
      </pure-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots TaskList loading 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <pure-task-list
        loading="true"
        ng-reflect-loading="true"
        ng-reflect-tasks=""
      >
        <div
          class="list-items"
        >
          
          
          
          <div>
            
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
          </div>
        </div>
      </pure-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots TaskList withPinnedTasks 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <pure-task-list
        ng-reflect-tasks="[object Object],[object Object"
      >
        <div
          class="list-items"
        >
          
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_PINNED"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          <task-item
            ng-reflect-task="[object Object]"
          >
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </task-item>
          
          
        </div>
      </pure-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-welcome-component
    _nghost-c0=""
  >
    <main
      _ngcontent-c0=""
    >
      <h1
        _ngcontent-c0=""
      >
        Welcome to storybook
      </h1>
      <p
        _ngcontent-c0=""
      >
        This is a UI component dev environment for your app.
      </p>
      <p
        _ngcontent-c0=""
      >
         We've added some basic stories inside the 
        <span
          _ngcontent-c0=""
          class="inline-code"
        >
          src/stories
        </span>
         directory. 
        <br
          _ngcontent-c0=""
        />
         A story is a single state of one or more UI components. You can have as many stories as you want. 
        <br
          _ngcontent-c0=""
        />
         (Basically a story is like a visual test case.) 
      </p>
      <p
        _ngcontent-c0=""
      >
         See these sample 
        <a
          _ngcontent-c0=""
          role="button"
          tabindex="0"
        >
          stories
        </a>
         for a component called 
        <span
          _ngcontent-c0=""
          class="inline-code"
        >
          Button
        </span>
         . 
      </p>
      <p
        _ngcontent-c0=""
      >
         Just like that, you can add your own components as stories. 
        <br
          _ngcontent-c0=""
        />
         You can also edit those components and see changes right away. 
        <br
          _ngcontent-c0=""
        />
         (Try editing the 
        <span
          _ngcontent-c0=""
          class="inline-code"
        >
          Button
        </span>
         stories located at 
        <span
          _ngcontent-c0=""
          class="inline-code"
        >
          src/stories/index.js
        </span>
        .) 
      </p>
      <p
        _ngcontent-c0=""
      >
         Usually we create stories with smaller UI components in the app.
        <br
          _ngcontent-c0=""
        />
         Have a look at the 
        <a
          _ngcontent-c0=""
          href="https://storybook.js.org/basics/writing-stories"
          rel="noopener noreferrer"
          target="_blank"
        >
           Writing Stories 
        </a>
         section in our documentation. 
      </p>
      <p
        _ngcontent-c0=""
        class="note"
      >
        <b
          _ngcontent-c0=""
        >
          NOTE:
        </b>
        <br
          _ngcontent-c0=""
        />
         Have a look at the 
        <span
          _ngcontent-c0=""
          class="inline-code"
        >
          .storybook/webpack.config.js
        </span>
         to add webpack loaders and plugins you are using in this project. 
      </p>
    </main>
  </storybook-welcome-component>
</storybook-dynamic-app-root>
`;
